<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#F5E7FF">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_about_us">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_back_icon"
            android:contentDescription="Назад" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/theory"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="24dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_si_conversion"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/button_background">

            <TextView
                android:fontFamily="@font/montserrat_alternates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/butt1"
                android:textColor="#2D1067"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_physics_calculator"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_marginTop="75dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/button_background">

            <TextView
                android:fontFamily="@font/montserrat_alternates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/butt2"
                android:textColor="#2D1067"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_theory"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_marginTop="75dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/button_background">

            <TextView
                android:fontFamily="@font/montserrat_alternates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/butt3"
                android:textColor="#2D1067"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


    </LinearLayout>


