<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5E7FF">

    <!-- Хеадер -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_about_us">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_back_icon"
            android:layout_marginStart="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_alternates"
            android:textColor="#000000"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <!-- Контент -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <!-- Первый блок -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/about_us_back1"
            android:orientation="vertical"
            android:padding="12dp"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optimization_text"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_alternates"
            android:textColor="#000000"
            android:gravity="center" />
    </LinearLayout>

    <!-- Второй блок -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_us_back2"
        android:orientation="vertical"
        android:padding="12dp"
    android:layout_marginTop="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/physics_easy"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_alternates"
        android:textColor="#000000"
        android:gravity="center" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:src="@drawable/full_logo_about_us"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="Логотип"/>
</LinearLayout>


<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@drawable/about_us_back3"
android:orientation="vertical"
android:padding="12dp"
    android:layout_marginTop="5dp">



<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/contributors"
android:textSize="18sp"
android:fontFamily="@font/montserrat_alternates"
android:textColor="#000000"
android:gravity="center"
android:layout_marginTop="8dp" />
    </LinearLayout>


<LinearLayout
android:id="@+id/accordion"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:layout_marginTop="15dp">

<LinearLayout
    android:id="@+id/accordion_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/accordion_header_background"
android:orientation="horizontal"
android:padding="20dp"
android:gravity="center_vertical">

<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/accordion_header"
    android:textSize="20sp"
    android:fontFamily="@font/montserrat_alternates"
    android:textColor="#000000"/>

<ImageView
    android:id="@+id/accordion_toggle"
    android:layout_width="24dp"
    android:layout_height="24dp"
    android:src="@drawable/ic_accordion_down" />

</LinearLayout>

    <LinearLayout
        android:id="@+id/accordion_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/accordion_content"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    </LinearLayout>

    </LinearLayout>

    </LinearLayout>