<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Поле "Введите обозначение" -->
    <TextView
        android:id="@+id/editText_designations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:background="@android:color/transparent"
        android:padding="16dp"
        android:scrollbars="vertical"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:gravity="top|start"
        app:layout_constraintBottom_toTopOf="@id/calculator_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Панель калькулятора -->
    <LinearLayout
        android:id="@+id/calculator_panel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/fragment_background"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_designations">

        <!-- Поле "Введите неизвестное" -->
        <TextView
            android:id="@+id/editText_unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <!-- Верхняя панель с кнопками -->
        <LinearLayout
            android:id="@+id/top_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="5dp">

            <ImageButton
                android:id="@+id/button_save"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/down"
                android:src="@drawable/ic_down_arrow" />

            <ImageButton
                android:id="@+id/button_left"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/left"
                android:src="@drawable/ic_left_arrow" />

            <ImageButton
                android:id="@+id/button_right"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/right"
                android:src="@drawable/ic_right_arrow" />

            <ImageButton
                android:id="@+id/button_clear"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/clear"
                android:src="@drawable/ic_clear" />

            <ImageButton
                android:id="@+id/button_cycle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cycle"
                android:src="@drawable/ic_cycle" />
        </LinearLayout>

        <!-- Панель режимов -->
        <LinearLayout
            android:id="@+id/modes_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:fontFamily="@font/montserrat_alternates"
                android:id="@+id/Designation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/labels"
                android:textSize="16sp"
                android:background="@drawable/ic_back" />

            <TextView
                android:fontFamily="@font/montserrat_alternates"
                android:id="@+id/Numbers_and_operations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/numbers_operations"
                android:textSize="16sp"
                android:background="@drawable/ic_back" />

            <TextView
                android:fontFamily="@font/montserrat_alternates"
                android:id="@+id/Units_of_measurement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/units"
                android:textSize="16sp"
                android:background="@drawable/ic_back" />
        </LinearLayout>

        <!-- Сетка клавиатуры -->
        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="7"
            android:paddingHorizontal="8dp"
            android:paddingBottom="4dp"
            android:rowCount="3">

            <TextView
                android:id="@+id/key_1"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_2"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_3"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_4"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_5"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_6"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_7"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_8"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_9"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_10"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_11"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_12"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_13"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_14"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_15"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_16"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_17"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_18"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_19"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_20"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />

            <TextView
                android:id="@+id/key_21"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@drawable/cell_background"
                android:padding="4dp" />
        </GridLayout>

        <!-- Блок со стрелками и номером страницы -->
        <LinearLayout
            android:id="@+id/bottom_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="11dp"
            android:paddingBottom="8dp"
            android:paddingHorizontal="8dp">

            <ImageButton
                android:id="@+id/button_prev_page"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_left_arrow"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/left_page" />

            <TextView
                android:id="@+id/page_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/page_number"
                android:textSize="18sp"
                android:layout_marginHorizontal="16dp" />

            <ImageButton
                android:id="@+id/button_next_page"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_right_arrow"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/right_page" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/button_scroll_down"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circle_scroll"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>